--- a/src/main/resources/templates/system/index.html
+++ b/src/main/resources/templates/system/index.html
@@ -48,7 +48,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-ok'" style="border: 0;"
-                             th:href="@{/dev/homepage}">错误检查
+                             th:href="@{/check/error}">错误报告
                         </div>
                     </li>
                 </div>
@@ -57,7 +57,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-database-blue'" style="border: 0;"
-                             th:href="@{/dev/homepage}">数据库空间
+                             th:href="@{/check/database}">数据库空间
                         </div>
                     </li>
                 </div>
@@ -66,7 +66,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-search'" style="border: 0;"
-                             th:href="@{/dev/homepage}">空间查询
+                             th:href="@{/check/space}">空间查询
                         </div>
                     </li>
                 </div>
@@ -75,7 +75,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-chart'" style="border: 0;"
-                             th:href="@{/dev/homepage}">系统性能
+                             th:href="@{/check/performance}">系统性能
                         </div>
                     </li>
                 </div>
@@ -84,7 +84,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-check'" style="border: 0;"
-                             th:href="@{/dev/homepage}">批处理检查
+                             th:href="@{/check/batch}">批处理检查
                         </div>
                     </li>
                 </div>
@@ -186,7 +186,7 @@
             <div style="padding: 5px 10px;">
                 <li class="nav-list">
                     <div class="easyui-linkbutton" data-options="iconCls:'icon-file'" style="border: 0;"
-                         th:href="@{/dev/homepage}">工作记录
+                         th:href="@{/manager/work}">工作记录
                     </div>
                 </li>
             </div>
@@ -199,7 +199,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-folder—data'" style="border: 0;"
-                             th:href="@{/dev/homepage}">系统资料
+                             th:href="@{/document/sys}">系统资料
                         </div>
                     </li>
                 </div>
@@ -209,7 +209,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-network'" style="border: 0;"
-                             th:href="@{/dev/homepage}">在线文档
+                             th:href="@{/document/online}">在线文档
                         </div>
                     </li>
                 </div>
@@ -219,7 +219,7 @@
                 <div style="padding: 5px 10px;">
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-folder—data'" style="border: 0;"
-                             th:href="@{/dev/homepage}">本地文档
+                             th:href="@{/document/local}">本地文档
                         </div>
                     </li>
                 </div>
@@ -286,6 +286,15 @@
                     <li class="nav-list">
                         <div class="easyui-linkbutton" data-options="iconCls:'icon-sum'" style="border: 0;"
                              th:href="@{/dev/console}">控制台
+                        </div>
+                    </li>
+                </div>
+            </ul>
+            <ul style="list-style: none;padding: 0 0 0 0 ;">
+                <div style="padding: 5px 10px;">
+                    <li class="nav-list">
+                        <div class="easyui-linkbutton" data-options="iconCls:'icon-sum'" style="border: 0;"
+                             th:href="@{/dev/vbtest1}">vbtestdemo1
                         </div>
                     </li>
                 </div>
